fix: align Monaco code and line numbers on mobile

--- a/packages/obsidian/src/styles.css
+++ b/packages/obsidian/src/styles.css
@@ -147,6 +147,7 @@ span.shiki-ul {
 }
 
 .markdown-source-view.mod-cm6.is-live-preview .shiki-monaco-codeblock .monaco-scrollable-element {
+	top: 0 !important;
 	overflow-y: hidden !important;
 }
 
